bdl-antlr/src/main/antlr/LibExpr.g4
grammar LibExpr;

import CommonLexerRules;

@header{
package cgs.bigdata.antlr.libexpr;
}

prog: stat+ ;
stat: expr NEWLINE
       | ID '=' expr
       | NEWLINE
       ;

expr: expr ('+'|'-') expr
       | expr ('*'|'/') expr
       | INT
       | ID
       | '(' expr ')'
       ;
